comment out TOC until you can get it working

--- a/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
+++ b/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
@@ -17,7 +17,7 @@ relatedPostsSlugs:
 
 import { FootnoteMarker as Marker } from '../../../components/Footnotes'
 
-### Table of Contents
+<!-- ### Table of Contents
 
 1. [Intro](#intro)
 2. [What is a State Machine?](#what-is-a-state-machine)
@@ -33,7 +33,7 @@ import { FootnoteMarker as Marker } from '../../../components/Footnotes'
 10. [Visualizing State Machines](#visualizing-state-machines)
 11. [How to Approach Creating a State Machine](#how-to-approach-creating-a-state-machine)
 12. [Testing](#testing)
-13. [Resources](#resources)
+13. [Resources](#resources) -->
 
 ### Intro
 
