--- a/src/posts/published/just-enough-fp-partial-application/index.mdx
+++ b/src/posts/published/just-enough-fp-partial-application/index.mdx
@@ -1,17 +1,17 @@
 ---
-categories: ['JavaScript', 'Web Development', 'Functional Programming']
 tags: ['Just Enough FP']
 date: '2019-04-27'
 slug: 'just-enough-fp-partial-application'
 title: 'Just Enough FP: Partial Application'
-relatedPostsSlugs: [
-  'just-enough-fp-higher-order-functions',
-  'just-enough-fp-pure-functions',
-  'just-enough-fp-immutability',
-  'just-enough-fp-currying',
-  'just-enough-fp-argument-order',
-  'just-enough-fp-pointfree'
-]
+relatedPostsSlugs:
+  [
+    'just-enough-fp-higher-order-functions',
+    'just-enough-fp-pure-functions',
+    'just-enough-fp-immutability',
+    'just-enough-fp-currying',
+    'just-enough-fp-argument-order',
+    'just-enough-fp-pointfree',
+  ]
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
