--- a/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
@@ -1,18 +1,18 @@
 ---
-categories: ['JavaScript', 'Web Development', 'Functional Programming']
 tags: ['Just Enough FP']
 date: '2019-03-22'
 slug: 'just-enough-functional-programming-course-launch'
 title: 'Just Enough Functional Programming Course Launch'
-relatedPostsSlugs: [
-  'just-enough-fp-higher-order-functions',
-  'just-enough-fp-pure-functions',
-  'just-enough-fp-immutability',
-  'just-enough-fp-currying',
-  'just-enough-fp-partial-application',
-  'just-enough-fp-argument-order',
-  'just-enough-fp-pointfree'
-]
+relatedPostsSlugs:
+  [
+    'just-enough-fp-higher-order-functions',
+    'just-enough-fp-pure-functions',
+    'just-enough-fp-immutability',
+    'just-enough-fp-currying',
+    'just-enough-fp-partial-application',
+    'just-enough-fp-argument-order',
+    'just-enough-fp-pointfree',
+  ]
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
@@ -37,8 +37,24 @@ Here's what you'll learn in the course:
 
 In just 30 minutes, you'll learn more than "just enough".
 
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Alright, who of you is excited to learn &quot;just enough&quot; functional programming this weekend? I teach you an almost jargon-less introduction to FP to whet your appetite. Enjoy on <a href="https://twitter.com/eggheadio?ref_src=twsrc%5Etfw">@eggheadio</a>! <a href="https://t.co/PfdODXviOG">https://t.co/PfdODXviOG</a></p>&mdash; Kyle Shevlin (@kyleshevlin) <a href="https://twitter.com/kyleshevlin/status/1109158892469010432?ref_src=twsrc%5Etfw">March 22, 2019</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<blockquote class="twitter-tweet" data-lang="en">
+  <p lang="en" dir="ltr">
+    Alright, who of you is excited to learn &quot;just enough&quot; functional
+    programming this weekend? I teach you an almost jargon-less introduction to
+    FP to whet your appetite. Enjoy on{' '}
+    <a href="https://twitter.com/eggheadio?ref_src=twsrc%5Etfw">@eggheadio</a>!{' '}
+    <a href="https://t.co/PfdODXviOG">https://t.co/PfdODXviOG</a>
+  </p>
+  &mdash; Kyle Shevlin (@kyleshevlin){' '}
+  <a href="https://twitter.com/kyleshevlin/status/1109158892469010432?ref_src=twsrc%5Etfw">
+    March 22, 2019
+  </a>
+</blockquote>
+<script
+  async
+  src="https://platform.twitter.com/widgets.js"
+  charset="utf-8"
+></script>
 
 Here's the course intro video. Give it a watch!
 
