--- a/src/posts/published/graphs-are-everywhere/index.mdx
+++ b/src/posts/published/graphs-are-everywhere/index.mdx
@@ -1,5 +1,4 @@
 ---
-categories: ['JavaScript', 'Web Development']
 tags: ['Computer Science', 'Data Structures and Algorithms']
 date: '2019-09-06'
 description: 'A graph data structure is a useful way to model many things in the real world. Take a look at data visualizations that show this.'
@@ -25,7 +24,10 @@ The first graph in this gallery I title _Mutuality_. It is the graph that forms 
   caption="Mutuality"
   data={{
     nodes: [{ id: 1 }, { id: 2 }],
-    links: [{ source: 1, target: 2 }, { source: 2, target: 1 }]
+    links: [
+      { source: 1, target: 2 },
+      { source: 2, target: 1 }
+    ]
   }}
 />
 
