--- a/src/posts/published/just-enough-fp-currying/index.mdx
+++ b/src/posts/published/just-enough-fp-currying/index.mdx
@@ -1,17 +1,17 @@
 ---
-categories: ['JavaScript', 'Web Development', 'Functional Programming']
 tags: ['Just Enough FP']
 date: '2019-04-26'
 slug: 'just-enough-fp-currying'
 title: 'Just Enough FP: Currying'
-relatedPostsSlugs: [
-  'just-enough-fp-higher-order-functions',
-  'just-enough-fp-pure-functions',
-  'just-enough-fp-immutability',
-  'just-enough-fp-partial-application',
-  'just-enough-fp-argument-order',
-  'just-enough-fp-pointfree'
-]
+relatedPostsSlugs:
+  [
+    'just-enough-fp-higher-order-functions',
+    'just-enough-fp-pure-functions',
+    'just-enough-fp-immutability',
+    'just-enough-fp-partial-application',
+    'just-enough-fp-argument-order',
+    'just-enough-fp-pointfree',
+  ]
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
