--- a/src/posts/published/just-enough-fp-pointfree/index.mdx
+++ b/src/posts/published/just-enough-fp-pointfree/index.mdx
@@ -1,18 +1,18 @@
 ---
-categories: ['JavaScript', 'Web Development', 'Functional Programming']
 tags: ['Just Enough FP']
 date: '2019-05-01'
 description: 'Pointfree programming is a style of programming that favors passing the function itself as an argument rather than using lambda functions to operate on data. It focuses on the composition of functions rather than micro-managing your data.'
 slug: 'just-enough-fp-pointfree'
 title: 'Just Enough FP: Pointfree'
-relatedPostsSlugs: [
-  'just-enough-fp-higher-order-functions',
-  'just-enough-fp-pure-functions',
-  'just-enough-fp-immutability',
-  'just-enough-fp-currying',
-  'just-enough-fp-partial-application',
-  'just-enough-fp-argument-order'
-]
+relatedPostsSlugs:
+  [
+    'just-enough-fp-higher-order-functions',
+    'just-enough-fp-pure-functions',
+    'just-enough-fp-immutability',
+    'just-enough-fp-currying',
+    'just-enough-fp-partial-application',
+    'just-enough-fp-argument-order',
+  ]
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
@@ -120,11 +120,7 @@ const slugs = strings
 Now, I can read in plain English what's going on in the final part of my program. Admittedly, it's pretty verbose this way, so let me give you a sneak peek to the next blog post and do this magically with composition:
 
 ```javascript
-const slugify = compose(
-  joinWithHyphen,
-  splitAtSpace,
-  lowerCase
-)
+const slugify = compose(joinWithHyphen, splitAtSpace, lowerCase)
 const slugs = strings.map(slugify)
 ```
 
