fix broken link

--- a/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
+++ b/src/posts/published/guidelines-for-state-machines-and-xstate/index.mdx
@@ -775,7 +775,7 @@ Notice that the `lit` state is an object with the states of all our parallel sta
 
 ### Visualizing State Machines
 
-XState has a very handy visualizer at [xstate.js.org/viz](xstate.js.org./viz). You can save machines as gists from the visualizer as well.
+XState has a very handy visualizer at [xstate.js.org/viz](https://xstate.js.org/viz). You can save machines as gists from the visualizer as well.
 
 ### How to Approach Creating a State Machine
 
